Fix for the chart bars overflowing for short-lived fires, break out into smaller components, fix for last bar not reachable when in animating mode

--- a/src/components/timeline/rangeslider.scss
+++ b/src/components/timeline/rangeslider.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 24px;
     position: relative;
-    margin-top: -33px;
+    margin-top: -36px;
   }
 
   .range-slider .track {
@@ -68,10 +68,9 @@
     }
 
     .slider-container {
-      width: calc(100% + -8px);
+      width: calc(100% - 30px);
       position: relative;
-      padding: 0 30px;
-      margin-left: 33px;
+      margin-left: 29px;
       margin-top: -19px;
       box-sizing: border-box;
       z-index: 9;
@@ -213,11 +212,9 @@
     }
 
     .time-labels {
-      padding: 0 30px;
-      width: 100%;
+      width: calc(100% - 30px);
       box-sizing: border-box;
-      margin-left: 30px;
-      margin-top: 0px;
+      margin-left: 28px;
     }
   }
 
